# letter-positon-frequency

./: .gitignore  analysis.py  analyze_corpus.py  analyze_dictionairy.py  corpus-analysis-quick.py  corpus-analysis.py  count_words_in_corpus.py  letter_counting.py  ngrams.py  pyproject.toml  readme.md
results/: corpus-analysis.csv  corpus_results.txt  dictionary.txt_results.txt  github.com-dwyl-english-words_results.csv  word_counts.csv  words.txt_results.txt
