[tool.poetry]
name = "letter-positon-frequency"
version = "0.1.0"
description = "Analysis of letter positon frequency in the english language"
authors = ["William Ritson <william.ritson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7"
nltk = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
